--- a/source/agent/Dockerfile
+++ b/source/agent/Dockerfile
@@ -1,6 +1,6 @@
  # Use a Python image with uv pre-installed
-FROM ghcr.io/astral-sh/uv:python3.13.5-bookworm-slim
-
+FROM python:3.12-slim-trixie
+COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 # Install the project into `/app`
 WORKDIR /app
 
@@ -34,4 +34,4 @@ ENTRYPOINT []
 # Run the FastAPI application by default
 # Uses `fastapi dev` to enable hot-reloading when the `watch` sync occurs
 # Uses `--host 0.0.0.0` to allow access from outside the container
-CMD ["fastapi", "dev", "--host", "0.0.0.0", "src/uv_docker_example"]
+CMD ["fastapi", "dev", "--host", "0.0.0.0", "--port", "4001", "cmd.py"]
