--- a/source/agent/pyproject.toml
+++ b/source/agent/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
   "fastapi[standard]>=0.116.1",
   "mcp[cli]>=1.13.1",
   "pydantic>=2.11.7",
+  "pymongo>=4.15.2",
   "python-dotenv>=1.1.1",
   "requests>=2.32.5",
 ]
