--- a/source/agent/pyproject.toml
+++ b/source/agent/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
   "anthropic>=0.64.0",
   "fastapi[standard]>=0.116.1",
+  "httptools>=0.6.4",
   "mcp[cli]>=1.13.1",
   "pydantic>=2.11.7",
   "pymongo>=4.15.2",
